--- a/doc/sample-base.bib
+++ b/doc/sample-base.bib
@@ -258,17 +258,46 @@
 }
 
 @article{zhou2019gdp,
-  title={Gdp: Generalized device placement for dataflow graphs},
-  author={Zhou, Yanqi and Roy, Sudip and Abdolrashidi, Amirali and Wong, Daniel and Ma, Peter C and Xu, Qiumin and Zhong, Ming and Liu, Hanxiao and Goldie, Anna and Mirhoseini, Azalia and others},
-  journal={arXiv preprint arXiv:1910.01578},
-  year={2019}
+  author    = {Yanqi Zhou and
+               Sudip Roy and
+               AmirAli Abdolrashidi and
+               Daniel Lin{-}Kit Wong and
+               Peter C. Ma and
+               Qiumin Xu and
+               Ming Zhong and
+               Hanxiao Liu and
+               Anna Goldie and
+               Azalia Mirhoseini and
+               James Laudon},
+  title     = {{GDP:} Generalized Device Placement for Dataflow Graphs},
+  journal   = {CoRR},
+  volume    = {abs/1910.01578},
+  year      = {2019},
+  url       = {http://arxiv.org/abs/1910.01578},
+  eprinttype = {arXiv},
+  eprint    = {1910.01578},
+  timestamp = {Wed, 16 Sep 2020 14:30:19 +0200},
+  biburl    = {https://dblp.org/rec/journals/corr/abs-1910-01578.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
 @article{addanki2019placeto,
-  title={Placeto: Learning generalizable device placement algorithms for distributed machine learning},
-  author={Addanki, Ravichandra and Venkatakrishnan, Shaileshh Bojja and Gupta, Shreyan and Mao, Hongzi and Alizadeh, Mohammad},
-  journal={arXiv preprint arXiv:1906.08879},
-  year={2019}
+  author    = {Ravichandra Addanki and
+               Shaileshh Bojja Venkatakrishnan and
+               Shreyan Gupta and
+               Hongzi Mao and
+               Mohammad Alizadeh},
+  title     = {Placeto: Learning Generalizable Device Placement Algorithms for Distributed
+               Machine Learning},
+  journal   = {CoRR},
+  volume    = {abs/1906.08879},
+  year      = {2019},
+  url       = {http://arxiv.org/abs/1906.08879},
+  eprinttype = {arXiv},
+  eprint    = {1906.08879},
+  timestamp = {Mon, 24 Jun 2019 17:28:45 +0200},
+  biburl    = {https://dblp.org/rec/journals/corr/abs-1906-08879.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
 @inproceedings{gori2005new,
@@ -341,10 +370,21 @@
 }
 
 @article{shi2020learned,
-  title={Learned Hardware/Software Co-Design of Neural Accelerators},
-  author={Shi, Zhan and Sakhuja, Chirag and Hashemi, Milad and Swersky, Kevin and Lin, Calvin},
-  journal={arXiv preprint arXiv:2010.02075},
-  year={2020}
+  author    = {Zhan Shi and
+               Chirag Sakhuja and
+               Milad Hashemi and
+               Kevin Swersky and
+               Calvin Lin},
+  title     = {Learned Hardware/Software Co-Design of Neural Accelerators},
+  journal   = {CoRR},
+  volume    = {abs/2010.02075},
+  year      = {2020},
+  url       = {https://arxiv.org/abs/2010.02075},
+  eprinttype = {arXiv},
+  eprint    = {2010.02075},
+  timestamp = {Mon, 12 Oct 2020 17:53:10 +0200},
+  biburl    = {https://dblp.org/rec/journals/corr/abs-2010-02075.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
 @article{kormushev2013reinforcement,
