removed reference to Micron for the review process
Signed-off-by: BASHAR ROMANOUS <basharromano@micron.com>

--- a/doc/sections/Abstract.tex
+++ b/doc/sections/Abstract.tex
@@ -1,5 +1,4 @@
-The Streaming Engine (SE) is a Coarse-Grained Reconfigurable Array developed by Micron 
-Technology.
+The Streaming Engine (SE) is a Coarse-Grained Reconfigurable Array. % developed by Micron Technology.
 The SE provides programming flexibility and high-performance with energy efficiency.
 %A program is broken down into a set of one or more Synchronous Data-Flows (SDFs).
 A program is represented as a computation graph, where every instruction is a node.
