Update methods section

--- a/doc/sample-base.bib
+++ b/doc/sample-base.bib
@@ -679,3 +679,10 @@ Publisher: Association for Computing Machinery},
 	keywords = {core placement optimization, machine learning for system, Multi-chip many-core architecture, neural network accelerator},
 	file = {Wu et al. - 2020 - Core Placement Optimization for Multi-Chip Many-Co.pdf:C\:\\Users\\basharromano\\Zotero\\storage\\HEUUNYXR\\Wu et al. - 2020 - Core Placement Optimization for Multi-Chip Many-Co.pdf:application/pdf},
 }
+
+@article{schulman2017proximal,
+  title={Proximal policy optimization algorithms},
+  author={Schulman, John and Wolski, Filip and Dhariwal, Prafulla and Radford, Alec and Klimov, Oleg},
+  journal={arXiv preprint arXiv:1707.06347},
+  year={2017}
+}
