Format rewards section

--- a/doc/sections/Method.tex
+++ b/doc/sections/Method.tex
@@ -58,7 +58,7 @@ If the current node can't be placed because of the constraints (all values in th
 
 \subsection{Model design}
 
-The actor and critic models architecture is shown in figure \ref{fig:model}. 
+The architecture for actor and critic models is shown in Fig. \ref{fig:model}.
 The input is separated in two categories: static and dynamic data. 
 Static data is information that doesn't change as nodes are being placed, such as: computation graph and tile memory constraint.
 Device state, node to be placed and placed node latencies are dynamic data that changes during placement.
