Update model diagram with value network

--- a/doc/sections/Method.tex
+++ b/doc/sections/Method.tex
@@ -75,6 +75,8 @@ The two embeddings are combined and fed into another MLP model to
 create actions. 
 Invalid actions are masked before being sent to the reward function. Masking was shown to be effective in RL setting \cite{Shengyi_mask}.
 
+\subsubsection{Global Graph Attention Module}
+
 \begin{figure*}[h]
   \centering
   \includegraphics[width=\textwidth]{fig/model_diagram.pdf}
