--- a/doc/sections/Method.tex
+++ b/doc/sections/Method.tex
@@ -86,3 +86,23 @@ Invalid actions are masked before being sent to the reward function. Masking was
   \label{fig:model}
 \end{figure*}
 
+\begin{algorithm}
+  \caption{\textcolor{red}{RL Mapping Algorithm}}
+  \label{alg:mapping}
+  \begin{algorithmic}
+    \Require $n \geq 0$
+\Ensure $y = x^n$
+\State $y \gets 1$
+\State $X \gets x$
+\State $N \gets n$
+\While{$N \neq 0$}
+\If{$N$ is even}
+    \State $X \gets X \times X$
+    \State $N \gets \frac{N}{2}$  \Comment{This is a comment}
+\ElsIf{$N$ is odd}
+    \State $y \gets y \times X$
+    \State $N \gets N - 1$
+\EndIf
+\EndWhile
+  \end{algorithmic}
+\end{algorithm}
