Add RL Mapper training algorithm

--- a/doc/sample-sigplan.tex
+++ b/doc/sample-sigplan.tex
@@ -29,7 +29,7 @@
 \usepackage{amsmath}
 \usepackage{bm}
 \usepackage{algorithm}
-\usepackage{algpseudocode}
+\usepackage{algcompatible}
 %% NOTE that a single column version is required for 
 %% submission and peer review. This can be done by changing
 %% the \doucmentclass[...]{acmart} in this template to 
