--- a/doc/sections/Method.tex
+++ b/doc/sections/Method.tex
@@ -86,23 +86,55 @@ Invalid actions are masked before being sent to the reward function. Masking was
   \label{fig:model}
 \end{figure*}
 
-\begin{algorithm}
-  \caption{\textcolor{red}{RL Mapping Algorithm}}
-  \label{alg:mapping}
-  \begin{algorithmic}
-    \Require $n \geq 0$
-\Ensure $y = x^n$
-\State $y \gets 1$
-\State $X \gets x$
-\State $N \gets n$
-\While{$N \neq 0$}
-\If{$N$ is even}
-    \State $X \gets X \times X$
-    \State $N \gets \frac{N}{2}$  \Comment{This is a comment}
-\ElsIf{$N$ is odd}
-    \State $y \gets y \times X$
-    \State $N \gets N - 1$
-\EndIf
-\EndWhile
-  \end{algorithmic}
-\end{algorithm}
+% \begin{algorithm*}
+%   \caption{\textcolor{red}{RL Mapping Algorithm}}
+%   \label{alg:mapping}
+%   \begin{algorithmic}[1]
+%     \State Input: $\theta_0$: Initial actor network parameters, $\phi_0$: Initial value network parameters, Graph $\mathcal{G}$ which is to be placed
+%     \For{k=0,1,2,...}
+%       \State Collect set of placements $\mathcal{D}_k$ by running policy $\pi(\theta_k)$.
+%       \State Compute advantage estimates $\mathit{A}$ using value function $\mathit{V}$
+%       \State Update policy $\pi(\theta_k)$:
+%       $\theta_{k+1} = \arg \max_{\theta} \underset{s,a \sim \pi_{\theta_k}}{{\mathrm E}}\left[
+%         \min\left(
+%           \frac{\pi_{\theta}(a|s)}{\pi_{\theta_k}(a|s)}  A^{\pi_{\theta_k}}(s,a), \;\;
+%           \text{clip}\left(\frac{\pi_{\theta}(a|s)}{\pi_{\theta_k}(a|s)}, 1 - \epsilon, 1+\epsilon \right) A^{\pi_{\theta_k}}(s,a)
+%           \right)\right],$
+
+%     \EndFor
+%   \end{algorithmic}
+% \end{algorithm*}
+
+\begin{algorithm*}
+  \caption{\textcolor{red}{WIP: RL Mapper Training Algorithm}}
+  \label{alg1}
+\begin{algorithmic}[1]
+  \STATE Input: $\theta_0$: Initial actor network parameters, $\phi_0$: Initial value network parameters, Graph $\mathcal{G}$ which is to be placed
+  \FOR{$k = 0,1,2,...$} 
+  \STATE Collect set of node placements ${\mathcal D}_k$ by running policy $\pi(\theta_k)$.
+  \STATE Compute discounted rewards $\hat{R}_t$.
+  \STATE Compute advantage estimates, $\hat{A}_t = \hat{R}_t - \hat{V}_t$ using current value function $V_{\phi_k}$.
+  \STATE Update the policy by maximizing the PPO-Clip objective:
+      \begin{equation*}
+        \theta_{k+1} = \arg \max_{\theta} \frac{1}{|{\mathcal D}_k| T} \sum_{\tau \in {\mathcal D}_k} \sum_{t=0}^T \min\left(
+            \frac{\pi_{\theta}(a_t|s_t)}{\pi_{\theta_k}(a_t|s_t)}  A^{\pi_{\theta_k}}(s_t,a_t), \;\;
+            g(\epsilon, A^{\pi_{\theta_k}}(s_t,a_t))
+        \right),
+      \end{equation*}
+      via stochastic gradient ascent with Adam where
+      \begin{equation}
+        g(\epsilon, A) = \left\{ 
+          \begin{array}{ll}
+          (1 + \epsilon) A & A \geq 0 \\
+          (1 - \epsilon) A & A < 0.
+          \end{array}
+          \right.
+      \end{equation}
+  \STATE Fit value function by regression on mean-squared error:
+      \begin{equation*}
+      \phi_{k+1} = \arg \min_{\phi} \frac{1}{|{\mathcal D}_k| T} \sum_{\tau \in {\mathcal D}_k} \sum_{t=0}^T\left( V_{\phi} (s_t) - \hat{R}_t \right)^2,
+      \end{equation*}
+      via gradient descent algorithm.
+  \ENDFOR
+\end{algorithmic}
+\end{algorithm*}
