--- a/doc/sections/Related_work.tex
+++ b/doc/sections/Related_work.tex
@@ -28,28 +28,26 @@ SE also provides asynchronous messaging as a first-class programming construct a
 Reinforcement Learning (RL) is widely used to tackle unsupervised optimization problems.
 It has been applied in chip placement \cite{mirhoseini2020chip}, workload distribution \cite{Mirhoseini_placementRNN, addanki2019placeto, zhou2019gdp}, compiler optimizations \cite{Zhou_compileGNN} and other decision based tasks \cite{kormushev2013reinforcement, ZophL16_NASRL}. 
 Alternative optimization algorithms includes evolutionary strategies \cite{Zhichao_ESNAS} and bayesian optimization \cite{shi2020learned}. 
-An advantage of RL approach is that it is able to learn from a collection of programs and reuse previous data for new programs by training a Deep Learning model \cite{zhou2019gdp}.
+An advantage of an RL approach is that it is able to learn from a collection of programs and reuse previous data for new programs by training a Deep Learning model \cite{zhou2019gdp}.
 
-Recurrent neural networks (RNN) \cite{hochreiter1996lstm} were a popular approach to process sequence of nodes from a graph representation. 
-Graph neural networks (GNN) \cite{gori2005new} have shown success in processing structured data without requiring the preprocessing required for RNNs.
+Recurrent neural networks (RNN) \cite{hochreiter1996lstm} were previously a popular approach to process a sequence of nodes from a graph representation. 
+Recently, graph neural networks (GNN) \cite{gori2005new} have shown success in processing structured data without needing the preprocessing required for RNNs.
 GNNs are widely used for tasks involving graph processing \cite{Zhou_compileGNN, zhou2019gdp}. 
-In addition, attention modules have sometimes been used in literature to supplement the embeddings created by GNNs to further improve results \cite{addanki2019placeto}.
+Attention modules have sometimes been used in literature to supplement the embeddings created by GNNs to further improve results \cite{addanki2019placeto}.
 
-In \cite{mirhoseini2020chip}, a RL based method for chip placement is presented.
-A graph neural network is used to create embeddings from a netlist graph and then passed through an actor model.
-The training is done using the PPO approach.
-Each component from the netlist is placed at a step until all components required for the chip have been placed.
+In \cite{mirhoseini2020chip}, an RL based method for chip placement is presented where a graph neural network is used to create embeddings from a netlist graph and then passed through an actor model to get placements on a chip canvas.
+The training is done using the PPO approach and one component from the netlist is placed at each step until all required components have been placed.
 The actor network in this method is composed of deconvolution layers which are more computationally intensive than our approach. 
-\cite{wu_core_2020} proposes an RL based method that uses a deep deterministic policy gradient (DDPG) method for multi-chip many-core systems.
-\cite{khailany_accelerating_2020} presents a review of various Machine Learning approaches including Reinforcement Learning for chip design.
+\cite{wu_core_2020} proposes an RL based method that uses a deep deterministic policy gradient (DDPG) method for component placement in multi-chip many-core systems.
+\cite{khailany_accelerating_2020} presents a review of various machine learning approaches including reinforcement learning for chip design.
 \cite{zhou2019gdp} presents a combination of graph neural network and transformer-XL model to place operations in dataflow graphs on suitable devices.
 In both of these works, the aim is similar to us i.e. to reduce the manual labor and domain expertise required to produce mappings.
 
-Our input is a combination of computation graph, SE device state and the node to be placed at a particular time step. 
-Instead of only feeding our actor model with embedding from graph neural network, we combine the graph neural network embedding with information from the SE device and a representation of node that is going to be placed. 
-A configuration is also added to guide the model to optimize different goals.
+% Our input is a combination of computation graph, SE device state and the node to be placed at a particular time step. 
+% Instead of only feeding our actor model with embedding from graph neural network, we combine the graph neural network embedding with information from the SE device and a representation of node that is going to be placed. 
+% A configuration is also added to guide the model to optimize different goals.
 
 A key difference between our work and \cite{zhou2019gdp} is that our strategy is to place one node at a time, instead of generating a whole assignment per iteration. 
 This allows our model to break down the placement problem into sub-problems and also allows the framework to start from a different starting configuration. 
 For example, if some nodes are already placed by some other algorithm such as bruthe force, the RL mapper can place the remaining nodes. 
-This approach also allows us to sample more data during the sampling phase which consists of partial assignments instead of only saving one sample for an entire sequence of nodes.
+This approach also allows us to obtain more data during the sampling phase which consists of partial assignments, instead of only saving one sample for an entire sequence of nodes.
