--- a/doc/sections/Results.tex
+++ b/doc/sections/Results.tex
@@ -62,7 +62,7 @@ to predict which tiles the predecessor nodes will be placed on, making training 
 
 
 \subsection{Output Masking}
-
+\label{subsec:output_masking}
 Output masking to filter invalid placements has been shown to be effective for RL in game environments \cite{Shengyi_mask}. 
 The SE instruction scheduling task has several invalid actions that adds noise to the samples and decision of the RL model, making convergence harder. 
 After placement of each node, the following nodes have fewer placement options due to their data dependecy with other nodes and device constraints.
