--- a/doc/sections/Method.tex
+++ b/doc/sections/Method.tex
@@ -8,6 +8,7 @@ It trains an actor and a critic model (represented as neural networks).
 The actor model is trained to produce actions (node placements in our case) from sample states obtained during simulation and the critic model is trained to match the sampled rewards from the actions produced by the actor using a surrogate loss function. 
 This sample and train process is repeated over various iterations. 
 In this manner, the problem search space is explored using the reward function as a heuristic.
+Refer to algorithm \ref{alg1} for the complete RL training process.
 Our SE mapping task is formulated as a discrete action problem where the goal is to place one node at each time step. 
 Samples of SE state, actions performed and rewards obtained at each time step are collected after executing the actions provided by the actor model in simulation. 
 These samples are stored in a buffer and are used as data to train the models.
@@ -15,8 +16,8 @@ Figure \ref{fig:ppo} shows the overall RL framework.
 
 The key components of our RL method are as follows:
 \begin{itemize}
-  \item States: The state is represented by a concatenation of an array of features of placed nodes, a selected node to be placed next and an embedding of the whole computation graph. 
-  \item Action: The action consists of the node to be placed along with the tile and spoke location it is to be placed at.
+  \item States: The state is $s$ represented by a concatenation of an array of features of placed nodes, a selected node to be placed next and an embedding of the whole computation graph. 
+  \item Action: The action $a$ consists of the node to be placed along with the tile and spoke location it is to be placed at.
   \item Reward function: The reward obtained is based on the number of clock cycles taken for a node to finish executing after its predecessors finished executing.
   \item Transition function: The transition function gives the probability distribution over next states given the current state and the action to be performed.
 \end{itemize}
@@ -29,11 +30,10 @@ The key components of our RL method are as follows:
 \end{figure}
 
 \subsection{State Representation}
-The state is a vector of size $|TS|+1$ where $TS$ is the set of tile slices in the Streaming Engine with $TS=T \times I$. Here $T$ and $I$ are sets of all tiles and initiation intervals in the SE respectively.
+The state $s$ is a vector of size $|TS|+1$ where $TS$ is the set of tile slices in the Streaming Engine with $TS=T \times S$. Here $T$ and $S$ are sets of all tiles and slots in the SE respectively. The number of slots available in each tile is equal to number of Initiation Intervals.
 
 \subsection{Action Representation}
-\todo[inline]{Ensure mathematical notations are consistent throughout paper}
-The action at each step is a tuple \((n,t,i)\) where $n \in N$ (the set of all nodes) is the node to be placed and $t \in T$ and $i \in I$ are the tile and initiation interval at which the node $n$ is to be placed. 
+The action $a$ at each step is a tuple \((n,t,i)\) where $n \in N$ (the set of all nodes) is the node to be placed and $t \in T$ and $s \in S$ are the tile and slot at which the node $n$ is to be placed. 
 We place nodes in a topological order which ensures that all of a node's predecessors have been placed before the node. 
 We do not make selecting the node to be placed a part of the learning problem since it increases the complexity of the learning process and makes training harder.
 
@@ -50,7 +50,7 @@ If the current node can't be placed because of the constraints (all values in th
 \[
   R_n =
   \begin{cases}
-    -\lambda,& m_i = 0, \, \forall \, i \in T \times I \\
+    -\lambda,& m_i = 0, \, \forall \, i \in T \times S \\
     t_n - t_{p(n)}, & \text{otherwise}
     
   \end{cases}
@@ -60,8 +60,10 @@ If the current node can't be placed because of the constraints (all values in th
 
 The architecture for actor and critic models is shown in Fig. \ref{fig:model}.
 The input is separated in two categories: static and dynamic data. 
-Static data is information that doesn't change as nodes are being placed, such as: computation graph and tile memory constraint.
-Device state, node to be placed and placed node latencies are dynamic data that changes during placement.
+Static data is information that doesn't change as nodes are being placed and includes the graph features from the DFG that encapsulate node dependence based on SE constraints.
+Device state (including placed nodes) and node to be placed are dynamic data that change during placement.
+
+\subsubsection{Global Graph Attention Module}
 
 Tile memory variables need to be placed in a tile so that operation can use that variable. 
 This memory constraint is captured as memory dependency array. 
@@ -75,7 +77,7 @@ The two embeddings are combined and fed into another MLP model to
 create actions. 
 Invalid actions are masked before being sent to the reward function. Masking was shown to be effective in RL setting \cite{Shengyi_mask}.
 
-\subsubsection{Global Graph Attention Module}
+
 
 \begin{figure*}[h]
   \centering
@@ -106,12 +108,18 @@ Invalid actions are masked before being sent to the reward function. Masking was
 % \end{algorithm*}
 
 \begin{algorithm*}
-  \caption{\textcolor{red}{WIP: RL Mapper Training Algorithm}}
+  \caption{WIP: RL Mapper Training Algorithm}
   \label{alg1}
 \begin{algorithmic}[1]
   \STATE Input: $\theta_0$: Initial actor network parameters, $\phi_0$: Initial value network parameters, Graph $\mathcal{G}$ which is to be placed
-  \FOR{$k = 0,1,2,...$} 
-  \STATE Collect set of node placements ${\mathcal D}_k$ by running policy $\pi(\theta_k)$.
+  \FOR{$k = 0,1,2,...$}
+  \FOR{$i = 0,1,2,...$}
+  \FOR{$\text{node} \, n \in \mathcal{G} \, \text{in topological order}$}
+    \STATE Get placement mask $m$ for $n$
+    \STATE Get placement for $n$ by running policy $\pi(\theta_k, m)$
+    \STATE Store node placements in buffer ${\mathcal D}_k$.
+  \ENDFOR
+  \ENDFOR
   \STATE Compute discounted rewards $\hat{R}_t$.
   \STATE Compute advantage estimates, $\hat{A}_t = \hat{R}_t - \hat{V}_t$ using current value function $V_{\phi_k}$.
   \STATE Update the policy by maximizing the PPO-Clip objective:
@@ -122,14 +130,14 @@ Invalid actions are masked before being sent to the reward function. Masking was
         \right),
       \end{equation*}
       via stochastic gradient ascent with Adam where
-      \begin{equation}
+      \begin{equation*}
         g(\epsilon, A) = \left\{ 
           \begin{array}{ll}
           (1 + \epsilon) A & A \geq 0 \\
           (1 - \epsilon) A & A < 0.
           \end{array}
           \right.
-      \end{equation}
+      \end{equation*}
   \STATE Fit value function by regression on mean-squared error:
       \begin{equation*}
       \phi_{k+1} = \arg \min_{\phi} \frac{1}{|{\mathcal D}_k| T} \sum_{\tau \in {\mathcal D}_k} \sum_{t=0}^T\left( V_{\phi} (s_t) - \hat{R}_t \right)^2,
