--- a/doc/sections/Results.tex
+++ b/doc/sections/Results.tex
@@ -1,7 +1,7 @@
 The implemented RL approach was able to successfully map the computation graphs for different programs such as vector add, distance calculation function and IFFT. 
 IFFT is widely used by several algorithms and its computation graph is shown in Fig. \ref{fig:ifft_graph} 
 The SE device configuration for the following experiments used 16 tiles and a maximum of 6 Initiation Interval (II).
-Other SE device configurations could have been used.
+Other SE device configurations are possible.
 
 \begin{figure}[h]
   \centering
@@ -11,13 +11,13 @@ Other SE device configurations could have been used.
 \end{figure}
 
 
-We also benchmarked our RL framework against a collection of random directed graphs. 
+We also benchmarked our RL framework against a collection of random directed graphs meant to simulate real life workloads. 
 We compare a baseline PPO method composed of 3 stacked MLPs against an actor model with the proposed Global Graph Attention (GGA) module.
 We evaluate these models on varying computation graphs with different complexities by increasing number of nodes in the graph. 
 We also tested on a larger device with 64 tiles.
 In Fig. \ref{fig:nodes_graph}, we observe that the RL approach finds mappings for a variety of computation graphs, and GGA
-improves the best schedule found for the same number of epochs. The GGA also finds improved schedule for a larger device configuration. 
-In the figure \ref{fig:nodes_graph}, the epochs were limited to 50000 for both models. 
+improves the best schedule found for the same number of training epochs. The GGA also finds improved schedule in terms of clock cycles taken for a larger device configuration. 
+For the results in figure \ref{fig:nodes_graph}, the epochs were limited to 50000 for both models. 
 The cycle count is number of SE execution steps taken to process all nodes for a mapping, which is calculated from the simulated SE environment. 
 
 \begin{figure}[h]
@@ -46,11 +46,10 @@ The node and states changes for each iteration over all nodes in the computation
 
 \subsection{Node Iteration Order}
 
-The iteration order is sequence in which nodes are fed to the actor model in the RL framework and plays an important role in whether the nodes can be successfully placed or not. 
+The iteration order is the sequence in which nodes are fed to the actor model in the RL framework and plays an important role in whether the nodes can be successfully placed or not. 
 In Fig. \ref{fig:ordered_placement}, we observe that iterating over nodes in topological 
 ordering results in higher reward and eases the node placement task. 
-On the other hand, when placing the leaf nodes first, the model needs
-to predict which tiles the predecessor nodes will be placed on, making training and the learning problem harder.
+On the other hand, when placing the nodes randomly, sometimes nodes get placed before their predecessors are placed and the model needs to predict which tiles the predecessor nodes will be placed on, making training and the learning problem harder.
 
 \begin{figure}[h]
   \centering
@@ -65,8 +64,8 @@ to predict which tiles the predecessor nodes will be placed on, making training 
 \label{subsec:output_masking}
 Output masking to filter invalid placements has been shown to be effective for RL in game environments \cite{Shengyi_mask}. 
 The SE instruction scheduling task has several invalid actions that adds noise to the samples and decision of the RL model, making convergence harder. 
-After placement of each node, the following nodes have fewer placement options due to their data dependecy with other nodes and device constraints.
-This reduces the search space as each node is being placed. 
+After placement of each node, the succeeding nodes have fewer placement options due to their data dependecy with other nodes and device constraints.
+Masking invalid placements reduces the search space as each node is being placed. 
 Figure \ref{fig:mask_nomask} demonstrates that masking improves the reward and sample efficiency of the RL model.
 
 \begin{figure}[h]
