--- a/doc/sections/Method.tex
+++ b/doc/sections/Method.tex
@@ -108,7 +108,7 @@ Invalid actions are masked before being sent to the reward function. Masking was
 % \end{algorithm*}
 
 \begin{algorithm*}
-  \caption{WIP: RL Mapper Training Algorithm}
+  \caption{RL Mapper Training Algorithm}
   \label{alg1}
 \begin{algorithmic}[1]
   \STATE Input: $\theta_0$: Initial actor network parameters, $\phi_0$: Initial value network parameters, Graph $\mathcal{G}$ which is to be placed
