--- a/doc/sample-base.bib
+++ b/doc/sample-base.bib
@@ -339,6 +339,15 @@
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
+@inproceedings{wu2019simplifying,         
+  title={Simplifying graph convolutional networks},
+  author={Wu, Felix and Souza, Amauri and Zhang, Tianyi and Fifty, Christopher and Yu, Tao and Weinberger, Kilian},
+  booktitle={International conference on machine learning},
+  pages={6861--6871},                                          
+  year={2019},
+  organization={PMLR}         
+}
+
 @article{Shengyi_mask,
   author    = {Shengyi Huang and
                Santiago Onta{\~{n}}{\'{o}}n},
