--- a/doc/sections/Results.tex
+++ b/doc/sections/Results.tex
@@ -30,7 +30,7 @@ The cycle count is number of SE execution steps taken to process all nodes for a
 \end{figure}
 
 
-\subsection{Global Graph Attention (GGA)}
+\subsection{Global Graph Attention (GGA)} \label{sec:GGA_result}
 
 In Fig. \ref{fig:ifft_rewards}, we see the addition of GGA module provides improved reward and sample efficiency for the IFFT application. 
 The node and states changes for each iteration over all nodes in the computation graph. The GGA module provides a representation of the entire graph while placing each node.
