add pretrain results

--- a/doc/sections/se.tex
+++ b/doc/sections/se.tex
@@ -3,7 +3,7 @@ This SF allows many tiles to be pipelined together to produce a continuous data 
 The tiles are also interconnected with an AF that allows synchronous domains of compute to be bridged by asynchronous operations.
 These asynchronous operations include initiating SDF operations, transferring data from one SDF to another, accessing system memory (read and write), and performing branching and looping constructs.
 
-\begin{figure}
+\begin{figure} [h]
   \begin{subfigure}{.5\textwidth}
     \centering
     \includegraphics[trim=118 310 180 110, clip, width=0.7\linewidth]{fig/se_device.pdf}
